--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.8'
 services:
+  transaction:
+    build: transaction
+    ports:
+      - "3001:8080"
+    depends_on:
+      - database
+
   database:
     image: postgres:latest
     restart: always
@@ -9,8 +16,4 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - database:/var/lib/postgresql/data
-
-volumes:
-  database:
-    driver: local
+      - ./sql:/docker-entrypoint-initdb.d
