[add] go postgres connection

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,6 +2,11 @@ version: '3.8'
 services:
   transaction:
     build: transaction
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_CONTAINER=database
+      - POSTGRES_DB=database
     ports:
       - "3001:8080"
     depends_on:
@@ -13,6 +18,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=database
     ports:
       - '5432:5432'
     volumes:
